src/styles/pages/01_index/_index-section-2-baby.scss
// стили для всех блоков с детьми
.index-section-baby{
  position: relative;
  padding-top: 0;
  padding-bottom: 0;
  background-image: url("../img/bg_white_blanket_and_stars.jpg");
  background-color: $bg-color-primary;
  background-repeat: no-repeat;
  background-position: center center;
  background-size: cover;

  .container, .index-section-baby__wrp{
    height: 100%;
    position: relative;
  }

  .index-section-baby__wrp{
    overflow: hidden;
  }
}



// слайдер на 3-м слайде
.index-section-baby__slick-slider, .index-section-baby__slider-item{
  position: relative;
  height: 100vh;
}
.index-section-baby__slick-slider{
  width: 100%;
}

.index-section-baby__slider-item{
  background-color: $bg-color-primary;
  background-repeat: no-repeat;
  background-position: center center;
  background-size: cover;
}

// облака
.index-section__baby-bg-bottom-img-1, .index-section__baby-bg-bottom-img-2{
  position: absolute;
  left: 0;
  right: 0;
  height: 100vh;
  background-repeat: repeat-x;
  background-position: center bottom;
}

.index-section__baby-bg-bottom-img-1{
  bottom: -85px;
  z-index: 13;
}

.index-section__baby-bg-bottom-img-2{
  bottom: -10px;
  z-index: 4;
}

.index-section__baby-something{
  position: absolute;
  height: 100%;
  right: 0;
  width: 50%;
  z-index: 3;

  img{
    position: absolute;
    max-width: 100%;
    max-height: 100%;
    animation: airplane infinite 7s linear;
  }
}

.index-section-baby__wrp{
  display: flex;
  justify-content: space-between;
  padding-top: 2vh;
  padding-bottom: 2vh;
}

// текстовый блок
.index-section-baby__content{
  position: relative;
  flex: none;
  align-self: center;
  width: 42%;
  padding-left: 10px;
  padding-top: 140px;
  padding-bottom: 20px;

  z-index: 14;

  &>div{
    border-radius: 5px;
    padding: 35px;
    background-color: #fff;
    box-shadow: 0 6px 28px 2px rgba(0, 0, 0, 0.2);
  }
}

.index-section-baby__title{
  font-size: 24px;
  line-height: 26px;
  font-weight: bold;
  text-transform: uppercase;
}

.index-section-baby__text{
  font-size: 16px;
  line-height: 22px;
  margin-bottom: 0;
}






//  ----- ребёнок
.index-section-baby__baby-wrp{
  position: relative;
  flex: none;
  align-self: center;
  width: 480px;
  height: 68vh;
  max-height: 60vh;
  z-index: 10;
 }

.index-section-baby__baby-img{
  position: absolute;
  width: 100%;
  height: 100%;
  align-self: center;
  z-index: 11;


}

// подушка
.index-section-baby__pillow-img{
  position: absolute;
  width:80%;
  height: 260px;
  top: -1000px;
  //left: 80px;
  left: 40%;
  transform: translateX(-50%) rotate(-10deg);
  z-index: 10;
}
// одеяло
.index-section-baby__blanket-img{
  position: absolute;
  width: 95%;
  bottom: -1000px;
  left: 60%;
  transform: translateX(-50%) rotate(-10deg);
  //left: 80px;
  z-index: 12;

}

